--- a/index.html
+++ b/index.html
@@ -3,20 +3,45 @@
 <head>
   <title>Leer y migrar archivos TXT a CSV</title>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+  <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;400&display=swap" rel="stylesheet">
   <style>
     .half-chart {
-  width: 35vw;
-  height: 35vh;
-}
+      width: 35vw;
+      height: 35vh;
+    }
   </style>
 </head>
 <body>
-  <input type="file" id="txtFiles" multiple><br>
-  <button onclick="processFiles()">Cargar archivos</button>
-  <table id="csvTable">
-    <!-- Aquí se mostrará la tabla CSV -->
-  </table>
-  <canvas id="chart" class="half-chart"></canvas>
+  <header>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <div class="container-fluid">
+        <a class="navbar-brand">Ejercicio Final</a>
+      </div>
+    </nav>
+  </header>
+  <div class="container p-4" id="formContainer">
+    <label class="text-center">Selecciona los archivos TXT que deseas migrar a CSV</label>
+    <input type="file" id="txtFiles" class="form-control mt-3" multiple>
+    <button onclick="processFiles()" class="btn btn-primary mt-3 fw-bold">Cargar archivos</button>
+    <table id="csvTable" class="table mt-3">
+      <!-- Aquí se mostrará la tabla CSV -->
+    </table>
+    <canvas id="chart" class="half-chart "></canvas>
+
+  </div>
   <script src="script.js"></script>
+  <footer>
+    <div class="container-fluid bg-dark text-white text-center p-3" id="footerFont">
+      <p class="fw-bold">Desarrollado por:</p>
+      <p>Óscar Alberto Nazarit Campos</p>
+      <p>José Rodolfo Ocampo Barajas</p>
+      <p>María José Ávila Amezcua</p>
+      <br>
+      <p class="fw-bold">Universidad de Colima - Facultad de Telemática</p>
+  </footer>
 </body>
 </html>
