jest test fixed

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <div class="container p-4" id="formContainer">
     <label class="text-center">Selecciona los archivos TXT que deseas migrar a CSV</label>
     <input type="file" id="txtFiles" class="form-control mt-3" multiple>
-    <button onclick="processFiles()" class="btn btn-primary mt-3 fw-bold" id="processButton">Cargar archivos</button>
+    <button  class="btn btn-primary mt-3 fw-bold" id="processButton">Cargar archivos</button>
     <table id="csvTable" class="table mt-3">
       <!-- Aquí se mostrará la tabla CSV -->
     </table>
